--- a/package.json
+++ b/package.json
@@ -1,11 +1,28 @@
 {
+  "name": "api-less",
+  "description" : "",
+  "tags": [
+    "api",
+    "less",
+    "utility"
+  ],
+  "version": "0.0.1",
+  "author": "Jackson Delahunt <sabrehagen@ozemail.com.au>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sabrehagen/api-less"
+  },
+  "bugs": {
+    "url": "https://github.com/sabrehagen/api-less/issues"
+  },
+  "license": "MIT",
+  "main": "index.js",
   "dependencies": {
     "bluebird": "^2.9.33",
     "chalk": "^1.1.0",
     "es5-shim": "^4.1.7",
     "es6-shim": "^0.32.2",
     "minimist": "^1.1.1",
-    "moment": "^2.10.3",
     "request": "^2.58.0",
     "window-size": "https://github.com/sabrehagen/window-size",
     "xxhash": "^0.2.2"
