--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "license": "MIT",
   "main": "index.js",
+  "bin": {
+    "api-less" : "index.js"
+  },
   "dependencies": {
     "bluebird": "^2.9.33",
     "chalk": "^1.1.0",
