--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "less",
     "utility"
   ],
-  "version": "0.0.3",
+  "version": "0.0.4",
   "author": "Jackson Delahunt <sabrehagen@ozemail.com.au>",
   "repository": {
     "type": "git",
@@ -24,10 +24,8 @@
     "bluebird": "^2.9.33",
     "chalk": "^1.1.0",
     "es5-shim": "^4.1.7",
-    "es6-shim": "^0.32.2",
     "minimist": "^1.1.1",
     "request": "^2.58.0",
-    "window-size": "https://github.com/sabrehagen/window-size",
-    "xxhash": "^0.2.2"
+    "window-size": "https://github.com/sabrehagen/window-size"
   }
 }
