--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "bluebird": "^2.9.33",
     "chalk": "^1.1.0",
     "es5-shim": "^4.1.7",
+    "es6-shim": "^0.33.6",
     "minimist": "^1.1.1",
+    "moment": "^2.10.6",
     "request": "^2.58.0",
-    "window-size": "https://github.com/sabrehagen/window-size"
+    "window-size": "https://github.com/sabrehagen/window-size",
+    "xxhash": "^0.2.3"
   }
 }
